// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptLocateAdbStep rendering renders per snapshot with adbLocation not set 1`] = `
<AndroidSetupStepLayout
  headerText="Locate Android Debug Bridge (adb)"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Close",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/locateadb"
    >
      How do I locate adb?
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": true,
      "onClick": [Function],
      "text": "Next",
    }
  }
>
  <FolderPicker
    deps={
      {
        "LinkComponent": [Function],
      }
    }
    instructionsText="Select the folder containing adb. We'll use it to connect to your device."
    onChange={[Function]}
    value=""
  />
</AndroidSetupStepLayout>
`;

exports[`PromptLocateAdbStep rendering renders per snapshot with adbLocation set 1`] = `
<AndroidSetupStepLayout
  headerText="Locate Android Debug Bridge (adb)"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Close",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/locateadb"
    >
      How do I locate adb?
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": false,
      "onClick": [Function],
      "text": "Next",
    }
  }
>
  <FolderPicker
    deps={
      {
        "LinkComponent": [Function],
      }
    }
    instructionsText="Select the folder containing adb. We'll use it to connect to your device."
    onChange={[Function]}
    value="/some/path/to/android/home"
  />
</AndroidSetupStepLayout>
`;
